# tsad

./: pyproject.toml
tests/: FFN-GAT.ipynb  Transformer.ipynb  ffn.pt  ffn_gat.pt  gat.ipynb  gat_viz.py  sandbox.ipynb
tests/.ipynb_checkpoints/: FFN-checkpoint.ipynb  gat-checkpoint.ipynb  sandbox-checkpoint.ipynb
tests/gat_artifacts/: attn_f_edge_idx.npy  attn_t.npy  attn_t_edge_idx.npy  attn_t_global_anom.npy  attn_t_trend_anom.npy  preds.npy  preds_global_anom.npy  preds_trend_anom.npy  targets.npy  targets_global_anom.npy  targets_trend_anom.npy
