[tool.poetry]
name = "tsad"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
torch-geometric = "^2.3.1"
numpy = "^1.24.3"
pandas = "^2.0.1"
notebook = "^6.5.4"
matplotlib = "^3.7.1"
plotly = "^5.15.0"
networkx = "^3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
